<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="HMI_Texts" Id="{4846fd75-ab6e-407a-8ff7-3e68310229fb}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	AlarmTexts: ARRAY [0..999] OF STRING;
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>