<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="ErrorManager" Id="{305b92f9-1888-4aa2-ae1c-5c8d107f3b2c}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK ErrorManager EXTENDS ErrorManagerBase
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="AddMessage" Id="{ceafe161-32d8-429e-886a-c310c5696f0b}">
      <Declaration><![CDATA[METHOD AddMessage : BOOL
VAR_INPUT
	i_alarmId	: UINT;
	i_active	: BOOL;
	//i_acknowledged	: BOOL;
	//i_confirmed	: BOOL;
	i_severity	: ESeverity;
	//i_retain	: BOOL;
	i_instanceName: STRING;
END_VAR
VAR
	i: UINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// move all errors to next index
FOR i := RaInterface_GVL.ALARM_ARR_MAX TO ResiConst.ARR_MIN + 1 BY -1  DO
	RaInterface_GVL.Out_Alarms[i] := RaInterface_GVL.Out_Alarms[i - 1];
END_FOR

// add new error at index 0
RaInterface_GVL.Out_Alarms[0].TimeTicks := F_GetSystemTime();
RaInterface_GVL.Out_Alarms[0].AlarmId := i_alarmId;
RaInterface_GVL.Out_Alarms[0].Active := i_active;
//RaInterface_GVL.Out_Alarms[0].Acknowledged := i_acknowledged;
//RaInterface_GVL.Out_Alarms[0].Confirmed := i_confirmed;
RaInterface_GVL.Out_Alarms[0].Severity := i_severity;
//RaInterface_GVL.Out_Alarms[0].RetainAlarm := i_retain;
RaInterface_GVL.Out_Alarms[0].Message := HMI_Texts.AlarmTexts[i_alarmId];
RaInterface_GVL.Out_Alarms[0].InstanceName := i_instanceName;
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="ErrorManager">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="ErrorManager.AddMessage">
      <LineId Id="74" Count="14" />
      <LineId Id="12" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>